--- a/Modelado_datos/Tarea2.ipynb
+++ b/Modelado_datos/Tarea2.ipynb
@@ -13,15 +13,44 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "html"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "  .image {\n",
+       "            overflow: hidden;\n",
+       "            width: 100%;\n",
+       "            border-radius: 20px;\n",
+       "            object-fit: cover;\n",
+       "        }\n",
+       "  .container {\n",
+       "            width: 100%;\n",
+       "            height: 450px;\n",
+       "        }\n",
+       " \n",
+       "</style>\n",
+       "<div class=\"container\">\n",
+       "    <img src= \"..\\img\\bicycle.png\" class=\"image\"/>\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
+    "%%html\n",
     "<style>\n",
     "  .image {\n",
     "            overflow: hidden;\n",
@@ -36,7 +65,7 @@
     " \n",
     "</style>\n",
     "<div class=\"container\">\n",
-    "    <img src= \"img\\bicycle.png\" class=\"image\"/>\n",
+    "    <img src= \"..\\img\\bicycle.png\" class=\"image\"/>\n",
     "</div>"
    ]
   },
@@ -837,7 +866,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
